internal
    - ignore optional Efile entry M
    - content filter can trigger tarpitting
    - f_data() cleaned up
    - SMTP DATA Time Metric
    - SMTP Data timer is for global transaction, not for a line
    - SMTP User not local error message change includes local hostname
    - Change MIN_WORK_TIME default to 300 seconds
    - New Content Fileter environment variable, SIMTA_CHECKSUM_SIZE
    - Content filter checksum now includes all non-failed rcpt to addresses
    - Added simck test program
    - Supressed compiler warnings
    - New queue scheduler timing prefers working to reading
    - Added BLOCK and ACCEPT to RBL syntax for whitelisting
    - Added better penalty box logging
    - bugfix: CTX init function added

0.7.3
    - SMTP_DATA_URL config file option added
    - refined content filter logging
    - don't publish content filter results via SMTP

0.7.2
    - Added SIMTA_MID for the SMTP Receive content filter
    - New Content Fileter environment variable, SIMTA_CHECKSUM_SIZE
    - Content filter checksum now includes all non-failed rcpt to addresses

0.7.1
    - checksum bugfix

0.7.0rc3
    - minimal dequoting of quoted strings for LDAP searches

0.7.0rc2
    - better description of QUEUE_INCOMING_MAIL in simta.conf
    - bugfix for default RED actions
    - better logging for Expand
    - make a bad Dinode re-read not a terminal error in envelope.c
    - differentiate between implied or defined SMTP in the red structure
    - add LOCALHOST token to RED rules
    - removed env_dup() from envelope.c, unused function

0.7.0rc1
    - install simexpander by default
    - Isolate D from RE in RED
    - QUEUE_INCOMING_SMTP_MAIL option added

2006-11-09
    - Multi-alias RE for PASSWORD and ALIAS

2006-11-08
    - Bugfix for MX host RE Isolation

2006-11-04
    - TARPIT directive added
    - Incoming SMTP connection metrics

2006-11-03
 - CHANGELOG added
 - libwrap #define fix, thanks Gab!

2006-10-27
 - SMTP error messages changed for postmaster