@@ -95,6 +95,7 @@ int			simta_dns_config = 1;
 int			simta_no_sync = 0;
 int			simta_max_received_headers = 100;
 int			simta_max_bounce_lines;
+int			simta_read_before_banner = 0;
 int			simta_max_failed_rcpts = 0;
 int			simta_receive_wait = 600;
 int			simta_data_transaction_wait = 3600;
@@ -1129,6 +1130,20 @@ simta_read_config( char *fname )
 			fname, lineno );
 		goto error;
 	    }
+
+	} else if ( strcasecmp( av[ 0 ], "READ_BEFORE_BANNER" ) == 0 ) {
+	    if ( ac != 2 ) {
+		fprintf( stderr, "%s: line %d: expected 1 argument\n",
+		    fname, lineno );
+		goto error;
+	    }
+	    if (( simta_read_before_banner = atoi( av[ 1 ])) < 1 ) {
+		fprintf( stderr, "%s: line %d: invalid argument\n",
+		    fname, lineno );
+		goto error;
+	    }
+	    if ( simta_debug ) printf( "READ_BEFORE_BANNER: %d\n",
+		    simta_read_before_banner );
 
 	} else if ( strcasecmp( av[ 0 ], "LOW_PREF_MX" ) == 0 ) {
 	   if ( simta_secondary_mx != NULL ) {
