@@ -210,6 +210,12 @@
 #
 #MAX_FAILED_RCPTS		0
 
+# Wait a number of seconds before sending the SMTP banner.  If the client
+# attempts to write before the banner, invoke SMTP client punishment.  0
+# turns this option off.
+#
+#READ_BEFORE_BANNER		0
+
 # Enable low-pref MX message acceptance for the designated domain.
 #
 #LOW_PREF_MX			DOMAIN
